# obs-studio

plugins/win-capture/: CMakeLists.txt  funchook.c  funchook.h  game-capture.c  graphics-hook-info.h  load-graphics-offsets.c  obfuscate.c  win-pipe.c  win-pipe.h
plugins/win-capture/data/locale/: en-US.ini
plugins/win-capture/get-graphics-offsets/: d3d9-offsets.cpp  get-graphics-offsets.c
plugins/win-capture/graphics-hook/: CMakeLists.txt  d3d10-capture.cpp  d3d11-capture.cpp  d3d9-capture.cpp  d3d9-patches.hpp  dxgi-capture.cpp  graphics-hook.c  graphics-hook.h
